<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:background="#ffffff">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:orientation="vertical"
        android:background="#3498db"
        android:id="@+id/linearLayout2"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/etIss"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="center"
            android:text="@string/manufacturer_information"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="normal" />
    </LinearLayout>




    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.dirgha03.iss.ISSItemActivity"
     android:orientation="vertical"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentEnd="true">


    <EditText
        android:id="@+id/etMname"

        android:ems="10"
        android:hint="@string/enter_manufacturer"
        android:inputType="textPersonName"
        style="@style/etStyle" />

    <EditText
        android:id="@+id/etMadeof"

        android:ems="10"
        android:hint="@string/enter_made_of"
        android:inputType="textPersonName"
        style="@style/etStyle" />

    <EditText
        android:id="@+id/etCost"

        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_cost"
        android:inputType="textPersonName"
        style="@style/etStyle" />

    <EditText
        android:id="@+id/etWarrenty"

        android:ems="10"
        android:hint="@string/warrenty"
        style="@style/etStyle"
        android:inputType="textPersonName" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
           android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMdate1"
                android:layout_width="124dp"
                android:layout_height="41dp"
                android:layout_marginRight="5dp"
                android:gravity="start"
                android:text="@string/manufacturing_date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMdate"
                android:layout_width="124dp"
                android:layout_height="44dp"
                android:paddingLeft="3dp"
                android:background="@drawable/background_textview"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivCalendar"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical|center_horizontal"
                app:srcCompat="@drawable/calendar" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/properties"
            android:layout_marginTop="10dp"
            android:paddingLeft="90dp"
            android:textSize="21sp"
            android:gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/cbDelicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/delicate"
            android:layout_marginRight="5dp"
            android:textColorLink="@android:color/holo_blue_light" />

        <CheckBox
            android:id="@+id/cbHard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

    </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/cbFragile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/fragile" />

            <CheckBox
                android:id="@+id/cbStrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Strong" />

        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            style="@style/btnStyle"
            android:layout_below="@+id/linearLayout2"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_title_style"
            android:onClick="onClick"
            android:text="@string/next" />

    </LinearLayout>
</RelativeLayout>
</ScrollView>